# Balagan

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  CurrentTasks.md  LICENSE  README.md  main.cpp
Resources/: Window.xml
Scripts/: build.py
Src/: main.cpp
Src/Containers/: Array.h  CMakeLists.txt  HashMap.h  Pair.h  String.cpp  String.h
Src/Core/: CoreDefs.h
Src/FileIo/: CMakeLists.txt  FileIo.cpp  FileIo.h
Src/FileIo/xml/: XmlParser.cpp  XmlParser.h
Src/Os/Window/: CMakeLists.txt  Window.cpp  Window.h
Src/Render/BAL2D/: BAL2D.cpp  BAL2D.h  CMakeLists.txt
src/: main.cpp
src/Containers/: Array.h  String.cpp  String.h
src/FileIo/: CMakeLists.txt  FileIo.cpp  FileIo.h
src/FileIo/json/: json.c  json.h
